Re-added breadcrums, corrected a button hyperlink

--- a/Report3/home-test/aut_forum.html
+++ b/Report3/home-test/aut_forum.html
@@ -57,6 +57,15 @@
         <div class="col-xl-0 mx-auto">
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
+
+        <div>
+    <ul class="breadcrumb">
+       <li><a href="aut_index.html">Home</a></li>
+       <li><a href="aut_projects.html">My Projects</a></li>
+       <li><a href="aut_thisproject.html">Project Title</a></li>
+       <li>Forum</li>
+   </ul></div>
+
           <div class="container">
           <br><h2 class="mb-5">Project Title</h2>
           <h7 class="mb-5">Text with the description of the project sadsadsadsadsa ad s dsa d sad sa d sad sa d sads ad sa d sad sa dsa sa</h7>
@@ -64,7 +73,7 @@
 
   <div>
     <a class="btn btn-primary" href="aut_thisproject.html" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Project</a>&ensp;&ensp;
-    <a class="btn btn-primary" href="href="tasklist.html" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Tasks</a>
+    <a class="btn btn-primary" href="tasklist.html" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Tasks</a>
   </div><br><br>
 
   <div id="id05" class="modal" align="center">
