--- a/Report3/home-test/aut_thisproject.html
+++ b/Report3/home-test/aut_thisproject.html
@@ -53,7 +53,12 @@
 		    <div class="col-xl-0 mx-auto">
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
-	
+	    <div>
+    <ul class="breadcrumb">
+       <li><a href="aut_index.html">Home</a></li>
+       <li><a href="aut_projects.html">My Projects</a></li>
+       <li>Project Title</li>
+   </ul></div>
      	<div class="container">
         	<br><h2 class="mb-5">Project Title</h2>
           <h7 class="mb-5">Text with the description of the project!</h7>
