--- a/Report3/home-test/aut_projects.html
+++ b/Report3/home-test/aut_projects.html
@@ -32,7 +32,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <a class="icon" href="aut_index.html"></a>
+        <a class="icon" href="aut_index.html">
+        	<img class="img-fluid mb-2"  src="img/proplanlogo.svg" alt="" href="aut_index.html">
+        </a>
         <a class="navbar-brand" href="aut_index.html">Home</a>
         <a class="navbar-brand" href="aut_about.html">About</a>
         <a class="navbar-brand" href="aut_projects.html">Projects</a>
