--- a/Report3/home-test/aut_projects.html
+++ b/Report3/home-test/aut_projects.html
@@ -46,9 +46,8 @@
             Username
           </button>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="aut_editprofile.html">Edit Profile</a>
             <a class="dropdown-item" href="aut_projects.html">My Projects</a>
-            <a class="dropdown-item" href="#">Project Invites</a>
+            <a class="dropdown-item" href="aut_settings.html">Settings</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="index.html">Sign Out</a>
           </div>
