--- a/Report3/home-test/aut_tasklist.html
+++ b/Report3/home-test/aut_tasklist.html
@@ -66,7 +66,7 @@
    </ul></div>
           <div class="container">
           <br><h2 class="mb-5">Project Title</h2>
-          <h7 class="mb-5">Text with the description of the project sadsadsadsadsa ad s dsa d sad sa d sad sa d sads ad sa d sad sa dsa sa</h7>
+          <h7 class="mb-5">Text with the description of the project</h7>
           <br><br>
 
   <div>
@@ -114,7 +114,9 @@
 
 			<div class="card-deck">
 				<div class="card text-white bg-danger mb-3">
-						<div class="card-header">In works by NAME<tab1></tab1><a class="btn btn-primary" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">TAKE THIS TASK</a></div>
+						<div class="card-header">In works by NAME<tab1></tab1></tab1>
+                <a class="btn btn-primary" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">EDIT </a>
+                <a class="btn btn-primary" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">DELETE</a></div>
 						<div class="card-body">
 						<h5 class="card-title">Title of task</h5>
 						<p class="card-text">Descritpion of task</p>
