--- a/Report3/home-test/aut_projects.html
+++ b/Report3/home-test/aut_projects.html
@@ -58,7 +58,7 @@
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
 
-	<div id="id03" class="modal" align="center">
+	<div id="id03" class="modal" align="left">
 
 		<form class="modal-content animate" action="/action_page3.php">
 		 	<div class="imgcontainer">
@@ -85,7 +85,7 @@
 			</div>
 
 			<button  ype="submit" class="btn btn-primary">Submit</button>
-			<label><br>
+			<label style="text-align: center"><br>
 				<input type="checkbox" checked="checked" name="takeme"> Take me to project page
 			</label><br>
 		</form>
@@ -123,7 +123,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="aut_thisproject.html" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -135,7 +135,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="#" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -147,7 +147,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="#" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -169,7 +169,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="#" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -181,7 +181,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="#" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -193,7 +193,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="#" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
