--- a/Report3/home-test/aut_thisprojectcoord.html
+++ b/Report3/home-test/aut_thisprojectcoord.html
@@ -21,7 +21,10 @@
 
     <!-- Custom styles for this template -->
     <link href="css/landing-page.min.css" rel="stylesheet">
+         <style type="text/css">
+      tab1 { padding-left: 22em; }
 
+    </style>
   </head>
 
   <body>
@@ -54,6 +57,45 @@
 	
 		    <div class="col-xl-0 mx-auto">
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
+
+	<div id="id03" class="modal" align="left">
+
+		<form class="modal-content animate" action="/action_page3.php">
+		 	<div class="imgcontainer">
+		 		<span onclick="document.getElementById('id03').style.display='none'" class="close" title="Close Modal">&times;
+		 		</span>
+	    	</div>
+
+
+<div class="container">
+		<label for="title"><b>Project Title</b></label>
+		<input type="text" placeholder="Enter Project Title" name="title" required><br><br>
+		<label for="pdis"><b>Project Description</b></label><br><br>
+		<textarea placeholder="Project Description" name="description" rows="10" class = "form-control"></textarea><br>
+
+				<label for="privacy"><b>Privacy</b></label>
+				<select name="privacy" class= "form-control" >
+					<option value="private">Private</option>
+					<option value="public" selected>Public</option>
+				</select><br>
+				<label for="privacy"><b>Status</b></label>
+				<select name="privacy" class= "form-control" >
+					<option value="inprogress" selected>In Progress</option>
+					<option value="concluded">Concluded</option>
+				</select><br>
+				<label for="number"><b>Max Number of Contributors</b></label>
+				<input class = "form-control" type="number" name="points" min="1" max="100" step="1" value="5"><br>
+
+			</div>
+
+			<button  ype="submit" class="btn btn-primary">Submit</button>
+			<label style="text-align: center"><br>
+				<input type="checkbox" checked="checked" name="takeme" > Take me to project page
+			</label><br>
+		</form>
+	</div>
+
+
     </div>
 	    <div>
     <ul class="breadcrumb">
@@ -61,8 +103,9 @@
        <li>Project Title</li>
    </ul></div>
      	<div class="container">
-        	<br><h2 class="mb-5">Project Title <a class="btn" href="#"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a></h2>
-          <h7 class="mb-5">Text with the description of the project! <a class="btn" href="#"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a></h2></h7>
+        	<br><h2 class="mb-5">Project Title <tab1><a class="btn" href="#" onclick="document.getElementById('id03').style.display='block'"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i><b class = "font-weight-bold" style="font-size: 150%">&ensp;Edit Project</b></a></h2>
+        	
+          <h7 class="mb-5">Text with the description of the project! </h2></h7>
         	<br><br>
 
   <div>
