--- a/Report3/home-test/projects.html
+++ b/Report3/home-test/projects.html
@@ -412,7 +412,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="thisproject.html" class="btn btn-primary">Go To Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -424,7 +424,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go To Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -436,7 +436,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go To Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -458,7 +458,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go To Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -470,7 +470,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go To Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -482,7 +482,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<a href="#" class="btn btn-primary">Go To Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
