--- a/Report3/home-test/thisproject.html
+++ b/Report3/home-test/thisproject.html
@@ -45,13 +45,8 @@
 	
      	<div class="container">
         	<br><h2 class="mb-5">Project Title</h2>
-          <h7 class="mb-5">Text with the description of the project sadsadsadsadsa ad s dsa d sad sa d sad sa d sads ad sa d sad sa dsa sa</h7>
-        	<br><br>
-
-  <div>
-    <a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Task List</a>&ensp;&ensp;
-    <a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Forum</a>
-  </div><br><br>
+          <h7 class="mb-5">Text with the description of the project</h7>
+        	<br><br><br>
 
         	<h4 class="mb-5">List of Contributors</h4>
 
