--- a/Report3/home-test/aut_contact.html
+++ b/Report3/home-test/aut_contact.html
@@ -45,9 +45,11 @@
             Username
           </button>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="aut_editprofile.html">Edit Profile</a>
             <a class="dropdown-item" href="aut_projects.html">My Projects</a>
-            <a class="dropdown-item" href="#">Project Invites</a>
+            <a class="dropdown-item" href="aut_settings.html"> <i class="fa fa-user-o text-success font-weight-bold"></i>
+              <span class="label label-success text-success font-weight-bold">4</span>&ensp;Join Requests</a>
+                <a class="dropdown-item" href="aut_settings.html"> <i class="fa fa-envelope-o text-success font-weight-bold"></i>
+              <span class="label label-success text-success font-weight-bold">1</span>&ensp;Invites</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="index.html">Sign Out</a>
           </div>
