--- a/Report3/home-test/aut_projects.html
+++ b/Report3/home-test/aut_projects.html
@@ -106,16 +106,24 @@
 	<div>
 	<a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Create New Project</a></div>
 	</section>
-<div class = "text-center"><br><br>
-<a class="btn btn-primary" href="#" ">Private Projects</a>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
 
-<a class="btn btn-primary" href="#" >Public Projects</a>
-</div>
-	<section>
-	<div>
-		<p><br></p>
-	</div>
+<section>
 	<div class="col-md-10 col-lg-8 col-xl-10 mx-auto">
+		<br>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+
+
+    <li class="nav-item">
+    <a class="nav-link active" id="public-tab" data-toggle="tab" href="#public" role="tab" aria-controls="public" aria-selected="false" style= "font-size: 150%">Public Projects</a>
+    </li>
+    <li class="nav-item">
+     <a class="nav-link" id="private-tab" data-toggle="tab" href="#private" role="tab" aria-controls="private" aria-selected="false" style= "font-size: 150%">Private Projects</a>
+    </li>
+  </li>
+</ul><br>
+
+<div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="public" role="tabpanel" aria-labelledby="public-tab">
 	<div class="card-deck">
 		<div class="card">
 			<div class="card-header">
@@ -153,13 +161,8 @@
 				<small class="text-muted">Last updated 3 mins ago</small>
 			</div>
 		</div>
-	</div></div>
-    </section>
+	</div><p><br></br></p> 
 
-
-	<p><br></br></p> 
-
-	<div class="col-md-10 col-lg-8 col-xl-10 mx-auto">
 	<!-- Project Selection -->
 	<section>
 	<div class="card-deck">
@@ -200,6 +203,100 @@
 			</div>
 		</div>
 	</div> 
+</section>
+
+
+	</div>
+
+
+    <div class="tab-pane fade show" id="private" role="tabpanel" aria-labelledby="private-tab">
+		<div class="card-deck">
+		<div class="card">
+			<div class="card-header">
+			<h5 class="card-title">Title of Project</h5>
+			</div>
+			<div class="card-body">
+				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a>
+			</div>
+			<div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header">
+			<h5 class="card-title">Title of Project</h5>
+			</div>
+			<div class="card-body">
+				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go to Project Page</a>
+			</div>
+			<div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header">
+			<h5 class="card-title">Title of Project</h5>
+			</div>
+			<div class="card-body">
+				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go to Project Page</a>
+			</div>
+			<div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div>
+		</div>
+	</div><p><br></br></p> 
+
+	<!-- Project Selection -->
+	<section>
+	<div class="card-deck">
+		<div class="card">
+			<div class="card-header">
+			<h5 class="card-title">Title of Project</h5>
+			</div>
+			<div class="card-body">
+				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go to Project Page</a>
+			</div>
+			<div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header">
+			<h5 class="card-title">Title of Project</h5>
+			</div>
+			<div class="card-body">
+				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go to Project Page</a>
+			</div>
+			<div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-header">
+			<h5 class="card-title">Title of Project</h5>
+			</div>
+			<div class="card-body">
+				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go to Project Page</a>
+			</div>
+			<div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div>
+		</div>
+	</div> 
+</section>
+
+	</div>
+</div>
+
+
+
+
     </section>
     <p><br></br></p>
 		<section align="center"><h4>
