--- a/Report3/home-test/aut_thisprojectcoord.html
+++ b/Report3/home-test/aut_thisprojectcoord.html
@@ -130,7 +130,7 @@
         	<br>
         <h2 class="mb-5">Project Title <tab2>
           <a class="btn" href="#" onclick="document.getElementById('id03').style.display='block'"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i><b class = "font-weight-bold" style="font-size: 150%">&ensp;Edit Project</b></a>
-          <a class="btn" href="#" onclick="document.getElementById('id04').style.display='block'"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i><b class = "font-weight-bold" style="font-size: 150%">&ensp;Invite Users</b></a>
+          <a class="btn" href="#" onclick="document.getElementById('id04').style.display='block'"><i class="fa fa-plus-square" aria-hidden="true" style="font-size:35px"></i><b class = "font-weight-bold" style="font-size: 150%">&ensp;Invite Users</b></a>
         </h2>
         	
           <h7 class="mb-5">Text with the description of the project! </h2></h7>
