--- a/Report3/home-test/aut_projects.html
+++ b/Report3/home-test/aut_projects.html
@@ -93,6 +93,24 @@
 
 	<!-- Project Selection -->
 
+<div id="id04" class="modal" align="left">
+
+		<form class="modal-content animate" action="/action_page3.php">
+		 	<div class="imgcontainer">
+		 		<span onclick="document.getElementById('id04').style.display='none'" class="close" title="Close Modal">&times;
+		 		</span>
+	    	</div>
+
+
+<div class="container">
+		<h3 style="text-align: center">An invite was sent to the Project Coordinator!</h3><br>
+			</div>
+		</form>
+	</div>
+
+
+		<!-- Project Selection -->
+
     <section class="testimonials text-center bg-light">
       <div class="container">
         <h2 class="mb-5">Projects</h2>
@@ -143,7 +161,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -155,7 +173,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -172,7 +190,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -184,7 +202,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -196,7 +214,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a><tab1></tab1><a class="btn btn-success" href="#" onclick="document.getElementById('id04').style.display='block'" style="width:auto;">JOIN</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -229,7 +247,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go to Project Page</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -241,7 +259,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go to Project Page</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -258,7 +276,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go to Project Page</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -270,7 +288,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go to Project Page</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
@@ -282,7 +300,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-			<a href="#" class="btn btn-primary">Go to Project Page</a>
+			<a href="aut_thisproject.html" class="btn btn-primary">Go to Project Page</a>
 			</div>
 			<div class="card-footer">
 				<small class="text-muted">Last updated 3 mins ago</small>
