--- a/Report3/home-test/aut_thisprojectcoord.html
+++ b/Report3/home-test/aut_thisprojectcoord.html
@@ -24,6 +24,7 @@
          <style type="text/css">
       tab1 { padding-left: 22em; }
       tab2 { padding-left: 16em; }
+      tab3 { padding-left: 52em; }
 
     </style>
   </head>
@@ -129,8 +130,8 @@
      	<div class="container">
         	<br>
         <h2 class="mb-5">Project Title <tab2>
-          <a class="btn" href="#" onclick="document.getElementById('id03').style.display='block'"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i><b class = "font-weight-bold" style="font-size: 150%">&ensp;Edit Project</b></a>
-          <a class="btn" href="#" onclick="document.getElementById('id04').style.display='block'"><i class="fa fa-plus-square" aria-hidden="true" style="font-size:35px"></i><b class = "font-weight-bold" style="font-size: 150%">&ensp;Invite Users</b></a>
+          <a class="btn" href="#" onclick="document.getElementById('id03').style.display='block'"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i><b class = "font-weight-bold" style="font-size: 120%">&ensp;Edit Project</b></a>
+          <a class="btn" href="#" onclick="document.getElementById('id04').style.display='block'"><i class="fa fa-envelope-o fa-2x" aria-hidden="true" style="font-size:35px"></i><b class = "font-weight-bold" style="font-size: 120%">&ensp;Invite Users</b></a>
         </h2>
         	
           <h7 class="mb-5">Text with the description of the project! </h2></h7>
@@ -154,7 +155,8 @@
 			</div><br>
 			<div class="card-deck">
 				<div class="card">
-						<div class="card-header">Project Member</div>
+						<div class="card-header">Project Member<tab3>
+          <a class="btn" href="#" onclick="document.getElementById('id03').style.display='block'"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a></div>
 						<div class="card-body">
 						<h5 class="card-title">Name</h5>
 						<p class="card-text">Descritpion</p>
@@ -163,7 +165,8 @@
 			</div><br>
 			<div class="card-deck">
 				<div class="card">
-						<div class="card-header">Project Member</div>
+						<div class="card-header">Project Member<tab3>
+          <a class="btn" href="#" onclick="document.getElementById('id03').style.display='block'"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a></div>
 						<div class="card-body">
 						<h5 class="card-title">Name</h5>
 						<p class="card-text">Descritpion</p>
